// Copyright (c) 2012 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.
//
// Summary of Chrome variations from experiments.

syntax = "proto2";

option optimize_for = LITE_RUNTIME;

package metrics;

message ChromeVariations {
  // A list of Chrome experiment variation IDs that are active.
  repeated int32 variation_id = 1;
}
